(vendored_dirs ocplib-endian)

(executable
 (name main)
 (libraries
  mirage-runtime
  psq
  lwt
  duration
  cstruct
  ipaddr
  tcpip
  tcpip.tcp
  mirage-clock
  mirage-random-stdlib
  logs.fmt)
 (forbidden_libraries unix)
 (preprocess
  (pps ppx_cstruct))
 (modes
  (byte c)))

(env
 (dev
  (flags
   (:standard -w -33-26-37-27))))

;(rule
; (target main.c)
; (deps main.bc.c)
; (action
;  (run ocamlclean -verbose %{deps} -o %{target})))

;(rule
; (target main.c)
; (deps main.bc.c)
; (action
;  (run cp %{deps} %{target})))
;
