(vendored_dirs ocplib-endian)

(executable
 (name main)
 (forbidden_libraries unix)
 (modes (byte c)))

(env
 (dev
  (flags
   (:standard -w -33-26-37-27))))

;(rule
; (target main.c)
; (deps main.bc.c)
; (action
;  (run ocamlclean -verbose %{deps} -o %{target})))

;(rule
; (target main.c)
; (deps main.bc.c)
; (action
;  (run cp %{deps} %{target})))
;
