(vendored_dirs ocplib-endian cohttp-mirage)

(executable
 (name main)
 (libraries
  mirage-random-stdlib
  mirage-runtime
  mirage-clock
  mirage-time
  mirage-flow
  cohttp-mirage
  cstruct
  duration
  tcpip.tcp
  logs.fmt
  ipaddr
  lwt
  psq)
 (forbidden_libraries unix)
 (preprocess
  (pps ppx_cstruct))
 (modes
  (byte c)))

(env
 (dev
  (flags
   (:standard -w -33-26-37-27))))

;(rule
; (target main.c)
; (deps main.bc.c)
; (action
;  (run ocamlclean -verbose %{deps} -o %{target})))

;(rule
; (target main.c)
; (deps main.bc.c)
; (action
;  (run cp %{deps} %{target})))
;
